--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.notes-2016-03-16.txt.swp
 .DS_Store
 .AppleDouble
 .LSOverride
@@ -12,3 +11,5 @@
 .Trashes
 .VolumeIcon.icns
 __pycache__
+*.log
+*.pyc
