--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ requests>=2.17.3
 ripe.atlas.cousteau>=1.4
 configargparse>=0.12
 sqlalchemy>=1.1.10
-psycopg2>=2.7.1
+psycopg2>=2.7.1 --no-binary psycopg2
 marisa-trie>=0.7.4
 ujson>=1.35
 multiprocessing-logging>=0.2.5
